--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Architecture & System Conference Deadlines 
+title: Computer Architecture & System Conference Deadlines 
 description: Countdowns to top Computer Architecture & System conference deadlines
-author: Abhishek Das
+author: Seonjin Na
 
 domain: "HPArch-gatech.github.io"
 baseurl: ""
