--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -4,6 +4,7 @@
   year: 2024
   id: isca24  # title as lower case + last two digits of year
   link: http://iscaconf.org/isca2024/
+  abstract_deadline: '2024-11-14 23:59:59'
   deadline: '2023-11-21 23:59:59'
   timezone: UTC-12
   place: TBD
@@ -34,6 +35,7 @@
   year: 2024
   id: osdi24  # title as lower case + last two digits of year
   link: https://www.usenix.org/conference/osdi24
+  abstract_deadline: '2024-11-30 17:59:59'
   deadline: '2023-12-13 17:59:59'
   timezone: EST
   place: TBD
@@ -44,7 +46,8 @@
   year: 2024
   id: dac24  # title as lower case + last two digits of year
   link: https://www.dac.com/
-  deadline: '2023-11-21 17:00:00'
+  abstract_deadline: '2024-11-13 16:59:59'
+  deadline: '2023-11-21 16:59:59'
   timezone: UTC-8
   place: TBD
   date: TBD
