--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Computer Architecture & System Conference Deadlines 
-description: Countdowns to top Computer Architecture & System conference deadlines
+description: Countdowns to top computer architecture & system conferences deadlines
 author: Seonjin Na
 
 domain: "HPArch-gatech.github.io"
