--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -176,7 +176,7 @@
   timezone: UTC
   place: Edinburgh, United Kingdom
   date: March, 2-6, 2024
-  sub: [ TBD, ARCH ]
+  sub: [ ARCH ]
 
 - title: ASPLOS (Summer)
   year: 2024
