--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -37,6 +37,19 @@
 
 
 
+- title: FPL
+  year: 2024
+  id: fpl24  # title as lower case + last two digits of year
+  link: https://2023.fpl.org/call-for-contributions/regular-track-and-journal-track
+  deadline: '2024-03-27 23:59:59'
+  timezone: UTC-12
+  place: TBD 
+  date: March, 3-5, 2024
+  sub: [ ARCH , TBD ]
+
+
+
+
 
 
 - title: ISPASS 
