--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,5 +1,30 @@
 ---
 
+
+- title: ACM CCS
+  year: 2024
+  id: ccs24  # title as lower case + last two digits of year
+  link: https://www.sigsac.org/ccs/CCS2024/call-for/call-for-papers.html
+  deadline: '2024-04-14 23:59:59'
+  timezone: UTC-12
+  place: Salt Lake City, USA
+  date: Oct 14 - Oct 18
+  sub: [ SEC ]
+  note: Important
+
+
+- title: USENIX Security 
+  year: 2024
+  id: usenixsec24  # title as lower case + last two digits of year
+  link: https://www.usenix.org/conference/usenixsecurity24/call-for-papers 
+  deadline: '2024-02-08 23:59:59'
+  timezone: UTC-12
+  place: PHILADELPHIA, PA, USA
+  date: Aug 14 - Aug 16
+  sub: [ SEC ]
+  note: Important
+
+
 - title: ISCA
   year: 2024
   id: isca24  # title as lower case + last two digits of year
@@ -24,7 +49,6 @@
   sub: [ ARCH ]
 
 
-
 - title: FPGA
   year: 2024
   id: fpga24  # title as lower case + last two digits of year
@@ -46,10 +70,6 @@
   place: TBD 
   date: March, 3-5, 2024
   sub: [ ARCH , TBD ]
-
-
-
-
 
 
 - title: ISPASS 
