--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -10,7 +10,7 @@
   place: Salt Lake City, USA
   date: Oct 14 - Oct 18
   sub: [ SEC ]
-  note: Important
+  note: Second review cycle
 
 
 - title: USENIX Security 
@@ -22,7 +22,7 @@
   place: PHILADELPHIA, PA, USA
   date: Aug 14 - Aug 16
   sub: [ SEC ]
-  note: Important
+  note: Winter Deadline
 
 
 - title: ISCA
