--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,6 +1,39 @@
 ---
 
 
+# 2024
+
+- title: HPCA
+  year: 2025
+  id: hpca25  # title as lower case + last two digits of year
+  link: https://hpca-conf.org/2025/
+  deadline: '2024-08-02 06:59:59'
+  timezone: UTC
+  place: Las Vegas, United States.
+  date: March, 1-5, 2025
+  sub: [ ARCH ]
+
+
+- title: ASPLOS (Summer)
+  year: 2025
+  id: asplos24summer
+  link: https://www.asplos-conference.org/asplos-2025-call-for-papers/ 
+  deadline: '2023-06-24 23:59:00'
+  timezone: UTC-4
+  place: Rotterdam, The Netherlands
+  date: Mar,30 - April 3 2025
+  sub: [ ARCH, SYS ]
+
+- title: IISWC
+  year: 2024
+  id: iiswc24  # title as lower case + last two digits of year
+  link: https://iiswc.org/iiswc2024/cfp.html 
+  deadline: '2024-06-03 23:59:00'
+  timezone: UTC-4
+  place:  Vancouver BC Canada 
+  date: Sep, 15-17, 2024
+  sub: [ ARCH,SYS ]
+
 - title: ACM CCS
   year: 2024
   id: ccs24  # title as lower case + last two digits of year
