--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -3,6 +3,29 @@
 
 # 2024
 
+
+- title: Eurosys (Fall)
+  year: 2025
+  id: eurosys25fall
+  link: https://2025.eurosys.org/cfp.html
+  deadline: '2024-10-23 23:59:00'
+  timezone: UTC-4
+  place: Rotterdam, The Netherlands
+  date: Mar,30 - April 3 2025
+  sub: [ SYS ]
+
+- title: ASPLOS (Fall)
+  year: 2025
+  id: asplos25fall
+  link: https://www.asplos-conference.org/asplos-2025-call-for-papers/ 
+  deadline: '2024-10-11 23:59:00'
+  timezone: UTC-4
+  place: Rotterdam, The Netherlands
+  date: Mar,30 - April 3 2025
+  sub: [ ARCH, SYS ]
+
+
+
 - title: HPCA
   year: 2025
   id: hpca25  # title as lower case + last two digits of year
