--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,7 +1,61 @@
 ---
 
 
+# 2025 
+
+- title: USENIX Security (Cycle2)
+  year: 2025
+  id: sec25cycle2
+  link: https://www.usenix.org/conference/usenixsecurity25/call-for-papers
+  deadline: '2025-1-22 23:59:00'
+  timezone: UTC-12
+  place: Seattle, WA, USA
+  date: August,13 - August 15 2025
+  sub: [ SEC ]
+
+- title: USENIX Security (Cycle1)
+  year: 2025
+  id: sec25cycle1
+  link: https://sp2025.ieee-security.org/cfpapers.html
+  deadline: '2024-9-4 23:59:00'
+  timezone: UTC-12
+  place: Seattle, WA, USA
+  date: August,13 - August 15 2025
+  sub: [ SEC ]
+
+
+- title: S&P (Cycle1)
+  year: 2025
+  id: sp25cycle2
+  link: https://sp2025.ieee-security.org/cfpapers.html
+  deadline: '2025-6-6 23:59:00'
+  timezone: UTC-12
+  place: SAN FRANCISCO, CA, USA
+  date: May,12 - May 15 2025
+  sub: [ SEC ]
+
+  - title: S&P (Cycle2)
+  year: 2025
+  id: sp25cycle2
+  link: https://www.usenix.org/conference/usenixsecurity25/call-for-papers
+  deadline: '2025-11-4 23:59:00'
+  timezone: UTC-12
+  place: SAN FRANCISCO, CA, USA
+  date: May,12 - May 15 2025
+  sub: [ SEC ]
 # 2024
+
+
+
+- title: S&P (Fall)
+  year: 2025
+  id: sp25fall
+  link: https://sp2025.ieee-security.org/cfpapers.html
+  deadline: '2024-10-23 23:59:00'
+  timezone: UTC-12
+  place: Rotterdam, The Netherlands
+  date: Mar,30 - April 3 2025
+  sub: [ SYS ]
 
 
 - title: Eurosys (Fall)
