--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -30,7 +30,7 @@
   link: https://sp2025.ieee-security.org/cfpapers.html
   deadline: '2024-6-6 23:59:00'
   timezone: UTC-12
-  place: SAN FRANCISCO, CA, USA
+  place: San Francisco, CA, USA
   date: May 12 - May 15 2025
   sub: [ SEC ]
 
@@ -40,7 +40,7 @@
   link: https://sp2025.ieee-security.org/cfpapers.html
   deadline: '2024-11-4 23:59:00'
   timezone: UTC-12
-  place: SAN FRANCISCO, CA, USA
+  place: San Francisco, CA, USA
   date: May 12 - May 15 2025
   sub: [ SEC ]
 # 2024
